--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,20 +1,26 @@
-$tabBar: rgba(32, 32, 32, 0.94);
-$grey70: rgba(36, 36, 36, 1);
-$grey40: rgba(72, 72, 72, 1);
-$purpule: rgba(81, 79, 207, 1);
-
 %fontInter {
   font-family: 'Inter';
   font-style: normal;
 }
-
 %tabBar {
   @extend %fontInter;
   font-weight: 500;
   font-size: 10px;
   line-height: 12px;
 }
-
+%title {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0.16px;
+}
+%title2 {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 22px;
+}
 %largeTitle {
   @extend %fontInter;
   font-weight: 600;
@@ -23,24 +29,33 @@ $purpule: rgba(81, 79, 207, 1);
   letter-spacing: 0.12px;
   font-feature-settings: 'pnum' on, 'lnum' on;
 }
-
 %nameTab {
   @extend %fontInter;
   font-weight: 400;
   font-size: 13px;
   line-height: 18px;
 }
-
-%headLine1 {
+%headlineSemiBold {
   @extend %fontInter;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 15px;
   line-height: 22px;
 }
-
-%headLine2 {
+%headLineRegular {
   @extend %fontInter;
-  font-weight: 600;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+}
+%btnAction {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+}
+%bodyText {
+  @extend %fontInter;
+  font-weight: 400;
   font-size: 15px;
   line-height: 20px;
 }
