--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,32 +1,24 @@
-$tabBar: rgba(32, 32, 32, 0.94);
-$grey40: rgba(96, 96, 96, 1);
-$grey50: rgba(54, 54, 54, 1);
-$grey60: rgba(41, 41, 41, 1);
-$grey70: rgba(32, 32, 32, 1);
-$purpule: rgba(81, 79, 207, 1);
-$green: rgba(21, 174, 73, 1);
+$blue: rgba(30, 106, 255, 1);
+$red: rgba(251, 63, 52, 1);
+$green: rgba(50, 215, 75, 1);
 
+$tabs: rgba(255, 255, 255, 0.08);
+$tabBarBackground: rgba(32, 32, 32, 0.94);
+$bottomSheet: rgba(32, 32, 32, 1);
 $deviders: rgba(50, 50, 50, 1);
-$description: rgba(48, 48, 48, 1);
 
-.purpule {
-  background-color: $purpule;
+$btnsPrimary: rgba(96, 96, 96, 1);
+$btnsSecondary: rgba(48, 48, 48, 1);
+
+.tabs {
+  background-color: $tabs;
 }
 .green {
   background-color: $green;
 }
-.grey40 {
-  background-color: $grey40;
+.blue {
+  background-color: $blue;
 }
-.grey60 {
-  background-color: $grey60;
-}
-.grey50 {
-  background-color: $grey50;
-}
-.grey70 {
-  background-color: $grey70;
-}
-.description {
-  background-color: $description;
+.red {
+  background-color: $red;
 }
