--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,60 +2,58 @@
   font-family: 'Inter';
   font-style: normal;
 }
-%tabBar {
+%footNote {
   @extend %fontInter;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 10px;
   line-height: 12px;
 }
-%title {
+%title1 {
   @extend %fontInter;
-  font-weight: 500;
-  font-size: 22px;
-  line-height: 28px;
-  letter-spacing: 0.16px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.28px;
 }
 %title2 {
   @extend %fontInter;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 17px;
   line-height: 22px;
 }
 %largeTitle {
   @extend %fontInter;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 24px;
   line-height: 30px;
-  letter-spacing: 0.12px;
+  letter-spacing: 0.32px;
   font-feature-settings: 'pnum' on, 'lnum' on;
 }
-%nameTab {
+%captionRegular {
   @extend %fontInter;
-  font-weight: 400;
-  font-size: 13px;
+  font-weight: 300;
+  font-size: 14px;
   line-height: 18px;
+  letter-spacing: 0.12px;
 }
-%headlineSemiBold {
-  @extend %fontInter;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 22px;
-}
-%headLineRegular {
-  @extend %fontInter;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 22px;
-}
-%btnAction {
+%bodySemiBold {
   @extend %fontInter;
   font-weight: 500;
   font-size: 15px;
   line-height: 22px;
+  letter-spacing: 0.16px;
 }
-%bodyText {
+%bodyRegular {
+  @extend %fontInter;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 22px;
+  letter-spacing: 0.16px;
+}
+%bodyMedium {
   @extend %fontInter;
   font-weight: 400;
   font-size: 15px;
-  line-height: 20px;
+  line-height: 22px;
+  letter-spacing: 0.16px;
 }
