--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,10 +1,11 @@
 $blue: rgba(30, 106, 255, 1);
 $red: rgba(251, 63, 52, 1);
-$green: rgba(50, 215, 75, 1);
+$green: rgba(35, 184, 73, 1);
 
-$tabs: rgba(255, 255, 255, 0.08);
+$tabs: rgba(255, 255, 255, 0.06);
 $tabBarBackground: rgba(32, 32, 32, 0.94);
-$bottomSheet: rgba(32, 32, 32, 1);
+$bottomSheet: rgba(28, 28, 30, 1);
+$bottomSheet2: rgba(44, 44, 46, 1);
 $deviders: rgba(50, 50, 50, 1);
 
 $btnsPrimary: rgba(96, 96, 96, 1);
