--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -10,31 +10,49 @@
 }
 %title1 {
   @extend %fontInter;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  letter-spacing: 0.28px;
 }
 %title2 {
   @extend %fontInter;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 17px;
+  line-height: 22px;
+  letter-spacing: -0.22px;
+}
+%title3 {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 16px;
   line-height: 22px;
 }
 %largeTitle {
   @extend %fontInter;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 24px;
   line-height: 30px;
   letter-spacing: 0.32px;
   font-feature-settings: 'pnum' on, 'lnum' on;
 }
-%captionRegular {
+%smallRegular {
   @extend %fontInter;
-  font-weight: 300;
-  font-size: 14px;
+  font-weight: 400;
+  font-size: 13px;
   line-height: 18px;
-  letter-spacing: 0.12px;
+}
+%smallMedium {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 18px;
+}
+%caption {
+  @extend %fontInter;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 14px;
+  letter-spacing: 0.05px;
 }
 %captionMedium {
   @extend %fontInter;
@@ -45,22 +63,19 @@
 }
 %bodySemiBold {
   @extend %fontInter;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 15px;
   line-height: 22px;
-  letter-spacing: 0.16px;
 }
 %bodyRegular {
-  @extend %fontInter;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 22px;
-  letter-spacing: 0.16px;
-}
-%bodyMedium {
   @extend %fontInter;
   font-weight: 400;
   font-size: 15px;
   line-height: 22px;
-  letter-spacing: 0.16px;
+}
+%bodyMedium {
+  @extend %fontInter;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
 }
