--- a/src/styles/_fontsClass.scss
+++ b/src/styles/_fontsClass.scss
@@ -1,9 +1,22 @@
 @import "@/styles/fonts";
-.captionRegular {
-  @extend %captionRegular;
+.title2 {
+  @extend %title2;
 
   text-align: left;
-  margin-bottom: 24px;
+  align-self: flex-start;
+  justify-self: flex-end;
+}
+.smallRegular {
+  @extend %smallRegular;
+
+  text-align: left;
+  align-self: flex-start;
+  justify-self: flex-end;
+}
+.smallMedium {
+  @extend %smallMedium;
+
+  text-align: left;
   align-self: flex-start;
   justify-self: flex-end;
 }
